src/projects/long-march-study/styles.css
/* ... */
.lm-mine-qr-button {
  width: 95px;
  height: 95px;
  border: 0;
  padding: 0;
  background: #fff;
}

.lm-mine-qr-button canvas {
  display: block;
  width: 95px !important;
  height: 95px !important;
}

.lm-mine-score-bar {
  position: absolute;
  left: 90px;
  top: 223px;
  width: 519px;
  height: 76px;
  object-fit: contain;
}

.lm-mine-stat {
  top: 261px;
  justify-content: center;
  width: 139px;
  height: 50px;
  font-size: 26px;
  font-weight: 400;
  text-align: center;
}

.lm-mine-stat-total {
  left: 66px;
}

.lm-mine-stat-remaining {
  left: 273px;
}

.lm-mine-stat-days {
  left: 480px;
}

.lm-mine-menu {
  position: absolute;
  left: 32px;
  top: 478px;
  display: flex;
  width: 685px;
  height: 760px;
  flex-direction: column;
  align-items: center;
  overflow: visible;
  border-radius: 20px;
  background: #fff;
  padding-top: 40px;
  padding-bottom: 20px;
}

.lm-mine-menu button {
  width: 626px;
  margin: 0 0 31px;
  border: 0;
  padding: 0;
  background: transparent;
  font-size: 0;
}

.lm-mine-menu button:nth-child(1) {
  height: 59px;
}

.lm-mine-menu button:nth-child(2) {
  height: 61px;
}

.lm-mine-menu button:nth-child(3),
.lm-mine-menu button:nth-child(4) {
  height: 64px;
}

.lm-mine-menu button:nth-child(5) {
  height: 62px;
}

.lm-mine-menu button:nth-child(6) {
  height: 61px;
}

.lm-mine-menu img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.lm-mine-home-button {
  position: absolute;
  left: 191px;
  top: 1286px;
  width: 364px;
  height: 68px;
  border: 0;
  border-radius: 100px;
  background: #e34020;
  color: #fff;
  font-size: 34px;
  font-weight: 400;
  line-height: normal;
  text-align: center;
}

.lm-mine-qr-modal,
.lm-mine-qr-mask {
  position: absolute;
  inset: 0;
}

.lm-mine-qr-modal {
  z-index: 30;
  display: flex;
  align-items: center;
  justify-content: center;
}

.lm-mine-qr-mask {
  border: 0;
  background: rgba(0, 0, 0, 0.72);
}

.lm-mine-qr-large {
  position: relative;
  z-index: 1;
  display: flex;
  width: 430px;
  height: 430px;
  align-items: center;
  justify-content: center;
  border-radius: 24px;
  background: #fff;
  box-shadow: 0 20px 54px rgba(0, 0, 0, 0.26);
}

.lm-mine-qr-large canvas {
  display: block;
  width: 360px !important;
  height: 360px !important;
}

.lm-poster-viewport {
  position: relative;
  max-width: 100%;
  margin: 0 auto;
  overflow: hidden;
}

.lm-poster-page {
  position: relative;
  width: 750px;
  height: 1448px;
  overflow: hidden;
  background: #fff;
  color: #000;
  text-align: center;
  transform-origin: 0 0;
}

.lm-poster-page.is-honor-certificate {
  background: #fff;
}

.lm-poster-page.is-share-poster {
  background: transparent;
}

.lm-poster-back {
  position: absolute;
  left: 20px;
  top: 32px;
  z-index: 4;
  width: 71px;
  height: 49px;
  padding: 0;
  border: 0;
  background: transparent;
}

.lm-poster-back img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  filter: brightness(0) invert(1);
}

.lm-certificate-title {
  position: absolute;
  left: 225px;
  top: 33px;
  z-index: 4;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 300px;
  height: 50px;
  overflow: hidden;
  color: #fff;
  font-size: 34px;
  line-height: normal;
  text-align: center;
  text-overflow: ellipsis;
  white-space: pre-wrap;
}

.lm-poster-live,
.lm-poster-generated {
  position: absolute;
  left: 0;
  top: 0;
  width: 750px;
  height: 1448px;
}

.lm-poster-qrcode-source {
  position: absolute;
  left: -9999px;
  top: -9999px;
  width: 400px;
  height: 400px;
  opacity: 0;
  pointer-events: none;
}

.lm-certificate-poster {
  position: absolute;
  inset: 0;
}

.lm-certificate-bg {
  position: absolute;
  left: 0;
  top: -88px;
  width: 750px;
  height: 1624px;
  object-fit: fill;
}

.lm-certificate-image {
  position: absolute;
  left: 66px;
  top: 133px;
  width: 621px;
  height: 1140px;
  object-fit: fill;
}

.lm-certificate-avatar {
  position: absolute;
  left: 311px;
  top: 450px;
  width: 124px;
  height: 124px;
  overflow: hidden;
  border-radius: 200px;
  object-fit: cover;
}

.lm-certificate-name {
  position: absolute;
  left: 291px;
  top: 611px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 177px;
  height: 50px;
  overflow: hidden;
  color: #000;
  font-size: 30px;
  line-height: normal;
  text-align: center;
  text-overflow: ellipsis;
  white-space: pre;
}

.lm-certificate-qrcode {
  position: absolute;
  left: 530px;
  top: 1068px;
  width: 116px !important;
  height: 116px !important;
  padding: 3px;
  background: #fff;
}

.lm-poster-generated {
  z-index: 2;
  object-fit: contain;
  -webkit-touch-callout: default;
  user-select: auto;
}

.lm-poster-generated.is-share-poster-generated {
  left: 30px;
  top: 92px;
  width: 689px;
  height: 1237px;
  border-radius: 28px;
}

.lm-poster-bg {
  position: absolute;
  left: 0;
  top: -88px;
  width: 750px;
  height: 1624px;
}

.lm-share-poster-bg {
  position: absolute;
  left: 0;
  top: -88px;
  width: 750px;
  height: 1624px;
  object-fit: fill;
}

.lm-share-poster-card {
  position: absolute;
  left: 30px;
  top: 92px;
  width: 689px;
  height: 1237px;
  overflow: hidden;
  border-radius: 28px;
  background: transparent;
}

.lm-share-poster-image {
  position: absolute;
  left: 0;
  top: 0;
  width: 689px;
  height: 1237px;
  object-fit: fill;
}

.lm-share-poster-avatar {
  position: absolute;
  left: 47px;
  top: 1125px;
  width: 85px;
  height: 86px;
  overflow: hidden;
  border-radius: 100px;
  object-fit: cover;
}

.lm-share-poster-qrcode {
  position: absolute;
  left: 510px;
  top: 1125px;
  width: 85px !important;
  height: 85px !important;
  background: #fff;
}

.lm-share-poster-user {
  position: absolute;
  left: 160px;
  top: 1133px;
  width: 328px;
  height: 113px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  overflow: hidden;
}
/* ... */

